--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/738b08a700.js" crossorigin="anonymous"></script>
     <title>Wild life</title>
@@ -11,17 +11,33 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">
-                <img src="images/logo.svg" alt="logo">
-                <p class="logo__name">WILDLIFE</p>
+            <div class="menu">
+                <div class="logo">
+                    <img id="logo" src="images/logo.svg" alt="logo">
+                    <p class="logo__name">WILDLIFE</p>
+                </div>
+                <nav class="navigation">
+                    <li><a href="#" class="navigation__links">Blog</a></li>
+                    <li><a href="#" class="navigation__links">Contacts</a></li>
+                    <li><i class="fas fa-search"></i></li>
+                    <button class="signIn">Sign in</button>
+                    <ul class="mobile-navigation">
+                        <li><a href="#" class="navigation__links">Blog</a></li>
+                        <li><a href="#" class="navigation__links">Contacts</a></li>
+                        <li><a href="#" class="search">Search</a></li>
+                        <li><a href="#" class="signIn__button">Sign In</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="navigation">
-                <li><a href="#" class="navigation__links">Blog</a></li>
-                <li><a href="#" class="navigation__links">Contacts</a></li>
-                <li><i class="fas fa-search"></i></li>
-                <button>Sign in</button>
-            </nav>
+            <div class="motto">
+                <h1>Survival</h1>
+                <p class="description text-regular-light">What this means is that we exist<br>to help protect our environment<br>and do in numbers of ways. You<br>can save the planet by donation.
+                <button class="donate">Donate</button>
+            </div>
         </div>    
     </header>
+    <section class="articles">
+
+    </section>
 </body>
 </html>
