feat: complite mobile navigation

--- a/index.html
+++ b/index.html
@@ -21,13 +21,21 @@
                     <li><a href="#" class="navigation__links">Contacts</a></li>
                     <li><i class="fas fa-search"></i></li>
                     <button class="signIn">Sign in</button>
-                    <ul class="mobile-navigation">
-                        <li><a href="#" class="navigation__links">Blog</a></li>
-                        <li><a href="#" class="navigation__links">Contacts</a></li>
-                        <li><a href="#" class="search">Search</a></li>
-                        <li><a href="#" class="signIn__button">Sign In</a></li>
-                    </ul>
+                    
                 </nav>
+                <ul class="mobile-navigation">
+                    <div class="burger">
+                        <input type="checkbox" name="open" class="open-checkbox">
+                        <span class="bars"></span>
+                        <nav class="mobile-menu">
+                            <a href="#" class="navigation__links">Blog</a>
+                            <a href="#" class="navigation__links">Contacts</a>
+                            <a href="#" class="search navigation__links">Search</a>
+                            <a href="#" class="signIn__button navigation__links">Sign In</a>
+                        </nav>
+                        
+                    </div>
+                </ul>
             </div>
             <div class="motto">
                 <h1>Survival</h1>
