feat: begin slider

--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
         </div>    
     </header>
     <section class="articles">
-
+        <div class="container">
+            <h2 class="articles__header">Latest articles</h2>
+            <sh-2 class="articles__subheader">Breaking news from the wild</sh-2>
+            <div class="slider__window">
+                <div class="slider">
+                    <div class="element" id="element1"></div>
+                    <div class="element" id="element2"></div>
+                    <div class="element" id="element3"></div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
