feat: adaptive slider

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
             <h2 class="articles__header">Latest articles</h2>
             <sh-2 class="articles__subheader">Breaking news from the wild</sh-2>
             <div class="slider__window">
+                <img src="/images/left.svg" alt="left" class="left">
+                <img src="/images/right.svg" alt="right" class="right">
                 <div class="slider">
-                    <div class="element" id="element1"></div>
-                    <div class="element" id="element2"></div>
-                    <div class="element" id="element3"></div>
+                    <div class="element" id="element1"><img src="/images/element1.jpg" alt="Deer"></div>
+                    <div class="element" id="element2"><img src="/images/element2.jpg" alt="Squirrel"></div>
+                    <div class="element" id="element3"><img src="/images/element3.jpg" alt="Bird"></div>
                 </div>
             </div>
         </div>
