feat: webpage complite

--- a/index.html
+++ b/index.html
@@ -70,6 +70,32 @@
             </div>
         </div>
     </section>
+    <section class="email">
+        <h3 class="get_notified">Get notified about new amazing articles</h3>
+        <div class="submit">
+            <textarea class="text_area" wrap="off" placeholder="Email"></textarea>
+            <button class="send_button">Send</button>
+        </div>
+    </section>
+    <footer class="pages">
+        <div class="container">
+            <div class="footer">
+                <div class="logo footer__logo">
+                    <img id="logo" src="images/logo.svg" alt="logo">
+                    <p class="logo__name">WILDLIFE</p>
+                </div>
+                <a href="#" class="navigation__links">Articles</a>
+                <a href="#" class="navigation__links">About us</a>
+                <a href="#" class="navigation__links">Learn more</a>
+                <nav class="social">
+                    <a href="#" class="social__button"><img src="images/facebook.svg" alt=""></a>
+                    <a href="#" class="social__button"><img src="images/instagram.svg" alt=""></a>
+                    <a href="#" class="social__button"><img src="images/pinterest.svg" alt=""></a>
+                    <a href="#" class="social__button"><img src="images/telegram.svg" alt=""></a>
+                </nav>
+            </div>
+        </div>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
