--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="menu">
                 <div class="logo">
-                    <img id="logo" src="images/logo.svg" alt="logo">
+                    <img id="logo" src="assets/logo.svg" alt="logo">
                     <p class="logo__name">WILDLIFE</p>
                 </div>
                 <nav class="navigation">
@@ -48,21 +48,21 @@
             <h2 class="articles__header">Latest articles</h2>
             <sh-2 class="articles__subheader">Breaking news from the wild</sh-2>
             <div class="slider__window">
-                <img src="/images/left.svg" alt="left" class="left" onclick="slide('left')">
-                <img src="/images/right.svg" alt="right" class="right" onclick="slide('right')">
+                <img src="/assets/left.svg" alt="left" class="left" onclick="slide('left')">
+                <img src="/assets/right.svg" alt="right" class="right" onclick="slide('right')">
                 <div class="slider">
                     <a class="element" id="element1">
-                        <img src="/images/element1.jpg" alt="Deer" class="element__image">
+                        <img src="/assets/element1.jpg" alt="Deer" class="element__image">
                         <h4 class="element__header">Deer</h4>
                         <small class="element__subheader">Naturalist investigation</small>
                     </a>
                     <a class="element" id="element2">
-                        <img src="/images/element2.jpg" alt="Squirrel" class="element__image">
+                        <img src="/assets/element2.jpg" alt="Squirrel" class="element__image">
                         <h4 class="element__header">Squirrel</h4>
                         <small class="element__subheader">Kamikaze squirrel</small>
                     </a>
                     <a class="element" id="element3">
-                        <img src="/images/element3.jpg" alt="Bird" class="element__image">
+                        <img src="/assets/element3.jpg" alt="Bird" class="element__image">
                         <h4 class="element__header">Bird</h4>
                         <small class="element__subheader">Birds fight club</small>
                     </a>
@@ -81,17 +81,17 @@
         <div class="container">
             <div class="footer">
                 <div class="logo footer__logo">
-                    <img id="logo" src="images/logo.svg" alt="logo">
+                    <img id="logo" src="assets/logo.svg" alt="logo">
                     <p class="logo__name">WILDLIFE</p>
                 </div>
                 <a href="#" class="navigation__links">Articles</a>
                 <a href="#" class="navigation__links">About us</a>
                 <a href="#" class="navigation__links">Learn more</a>
                 <nav class="social">
-                    <a href="#" class="social__button"><img src="images/facebook.svg" alt=""></a>
-                    <a href="#" class="social__button"><img src="images/instagram.svg" alt=""></a>
-                    <a href="#" class="social__button"><img src="images/pinterest.svg" alt=""></a>
-                    <a href="#" class="social__button"><img src="images/telegram.svg" alt=""></a>
+                    <a href="#" class="social__button"><img src="assets/facebook.svg" alt=""></a>
+                    <a href="#" class="social__button"><img src="assets/instagram.svg" alt=""></a>
+                    <a href="#" class="social__button"><img src="assets/pinterest.svg" alt=""></a>
+                    <a href="#" class="social__button"><img src="assets/telegram.svg" alt=""></a>
                 </nav>
             </div>
         </div>
